src/snapshots/molt__tests__expr__match___assign_lhs.snap
---
source: src/lib.rs
expression: "super :: super :: match_pattern(stringify! (expr), stringify! (assign_lhs))"
---
note: Match
   ┌─ "test_data/expr/main.rs":16:5
   │
16 │     foo = 10;
   │     ^^^^^^^^ $expr
   │
   = $e = foo
