src/snapshots/molt__tests__expr__match___assign_rhs.snap
---
source: src/lib.rs
expression: "super :: super :: match_pattern(stringify! (expr), stringify! (assign_rhs))"
snapshot_kind: text
---
note: Match
   ┌─ "test_data/expr/main.rs":13:5
   │
13 │     foo = 10;
   │     ^^^^^^^^ $expr
   │
   = $e = 10
