src/snapshots/molt__tests__expr__match___binary.snap
---
source: src/lib.rs
expression: "super :: super :: match_pattern(stringify! (expr), stringify! (binary))"
snapshot_kind: text
---
note: Match
  ┌─ "test_data/expr/main.rs":2:6
  │
2 │     (x+1);
  │      ^^^ $expr
  │
  = $e1 = x
  = $e2 = 1

note: Match
   ┌─ "test_data/expr/main.rs":39:6
   │
39 │     (1 + 2) + (3 + 4)
   │      ^^^^^ $expr
   │
   = $e1 = 1
   = $e2 = 2

note: Match
   ┌─ "test_data/expr/main.rs":39:16
   │
39 │     (1 + 2) + (3 + 4)
   │                ^^^^^ $expr
   │
   = $e1 = 3
   = $e2 = 4

note: Match
   ┌─ "test_data/expr/main.rs":39:5
   │
39 │     (1 + 2) + (3 + 4)
   │     ^^^^^^^^^^^^^^^^^ $expr
   │
   = $e1 = (1 + 2)
   = $e2 = (3 + 4)
