src/snapshots/molt__tests__expr__match___closure.snap
---
source: src/lib.rs
expression: "super :: super :: match_pattern(stringify! (expr), stringify! (closure))"
---
note: Match
   ┌─ "test_data/expr/main.rs":49:13
   │
49 │     let x = |bar| bar + 1;
   │             ^^^^^^^^^^^^^ $expr
   │
   = $e = bar + 1
