src/snapshots/molt__tests__expr__match___expr.snap
---
source: src/lib.rs
expression: "super :: super :: match_pattern(stringify! (expr), stringify! (expr))"
---
note: Match
  ┌─ "test_data/expr/main.rs":2:6
  │
2 │     (x+1);
  │      ^ $x

note: Match
  ┌─ "test_data/expr/main.rs":2:8
  │
2 │     (x+1);
  │        ^ $x

note: Match
  ┌─ "test_data/expr/main.rs":2:6
  │
2 │     (x+1);
  │      ^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":2:5
  │
2 │     (x+1);
  │     ^^^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":3:5
  │
3 │     foo.0.0.0.0;
  │     ^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":3:5
  │
3 │     foo.0.0.0.0;
  │     ^^^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":3:5
  │
3 │     foo.0.0.0.0;
  │     ^^^^^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":3:5
  │
3 │     foo.0.0.0.0;
  │     ^^^^^^^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":3:5
  │
3 │     foo.0.0.0.0;
  │     ^^^^^^^^^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":4:5
  │
4 │     foo.0.0.0.0.0;
  │     ^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":4:5
  │
4 │     foo.0.0.0.0.0;
  │     ^^^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":4:5
  │
4 │     foo.0.0.0.0.0;
  │     ^^^^^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":4:5
  │
4 │     foo.0.0.0.0.0;
  │     ^^^^^^^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":4:5
  │
4 │     foo.0.0.0.0.0;
  │     ^^^^^^^^^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":4:5
  │
4 │     foo.0.0.0.0.0;
  │     ^^^^^^^^^^^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":5:11
  │
5 │     match x {
  │           ^ $x

note: Match
  ┌─ "test_data/expr/main.rs":6:9
  │
6 │         foo..bar => {},
  │         ^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":6:14
  │
6 │         foo..bar => {},
  │              ^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":6:21
  │
6 │         foo..bar => {},
  │                     ^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":7:11
  │
7 │         ..bar => {},
  │           ^^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":7:18
  │
7 │         ..bar => {},
  │                  ^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":8:15
  │
8 │         .. => {},
  │               ^^ $x

note: Match
  ┌─ "test_data/expr/main.rs":9:16
  │
9 │         'a' => {},
  │                ^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":5:5
   │  
 5 │ ╭     match x {
 6 │ │         foo..bar => {},
 7 │ │         ..bar => {},
 8 │ │         .. => {},
 9 │ │         'a' => {},
10 │ │     }
   │ ╰─────^ $x

note: Match
   ┌─ "test_data/expr/main.rs":12:15
   │
12 │     let foo = bar.baz().bla().qux();
   │               ^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":12:15
   │
12 │     let foo = bar.baz().bla().qux();
   │               ^^^^^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":12:15
   │
12 │     let foo = bar.baz().bla().qux();
   │               ^^^^^^^^^^^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":12:15
   │
12 │     let foo = bar.baz().bla().qux();
   │               ^^^^^^^^^^^^^^^^^^^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":15:9
   │
15 │         foo();
   │         ^^^ $x

note: Match
   ┌─ "test_data/expr/main.rs":15:9
   │
15 │         foo();
   │         ^^^^^ $x
