src/snapshots/molt__tests__expr__match___for_loop.snap
---
source: src/lib.rs
expression: "super :: super :: match_pattern(stringify! (expr), stringify! (for_loop))"
---
note: Match
   ┌─ "test_data/expr/main.rs":38:5
   │  
38 │ ╭     for foo in bar.baz() {
39 │ │     }
   │ ╰─────^ $expr
   │  
   = $e = bar.baz()
   = $ident = foo
