src/snapshots/molt__tests__expr__match___function_chain.snap
---
source: src/lib.rs
expression: "super :: super ::\nmatch_pattern(stringify! (expr), stringify! (function_chain))"
---
note: Match
   ┌─ "test_data/expr/main.rs":12:15
   │
12 │     let foo = bar.baz().bla().qux();
   │               ^^^^^^^^^^^^^^^^^^^^^ $x
   │
   = $e = bar.baz()
